# finance

./: .env.example  .env.test  .gitignore  CLAUDE.md  README.md  cron.example  main.py  pyproject.toml  run.sh
config/: schedule.py  watchlist.yaml
docs/: business.md
docs/business/: 1-data-ingestion.md  10-macro-evaluation.md  11-micro-evaluation.md  2-signal-pipeline.md  3-closed-loop-learning.md  4-knowledge-base.md  5-backtest.md  6-system-operations.md  7-web-dashboard.md  8-indicators-catalog.md  9-technical-evaluation.md
docs/test-cases/: 10-macro-evaluation.md  11-micro-evaluation.md  8-indicators-catalog.md  9-technical-evaluation.md
migrations/: 2026-05-23_extend_fundamentals_v2.sql
src/finance_bot/: __init__.py  logger.py  settings.py
src/finance_bot/ai/: __init__.py  arbiter.py  embedding.py  llm.py  memory.py  prompt.py  rag.py
src/finance_bot/analysis/: __init__.py  composite.py  evaluation_macro.py  evaluation_micro.py  evaluation_technical.py  risk.py  signal.py  technical.py
src/finance_bot/db/: __init__.py  migrations.py  models.py  queries.py  repositories.py  schema.sql  session.py
src/finance_bot/jobs/: backtest.py  eval_outcomes.py  process_feedback.py  run_signals.py  scheduler.py  sync_fundamentals.py  sync_industry_averages.py  sync_knowledge.py  sync_news.py  sync_prices.py
tests/: conftest.py
tests/unit/: test_arbiter.py  test_evaluation_micro_checklist.py  test_risk.py  test_settings.py  test_signal.py  test_technical.py  test_technical_new_indicators.py  test_telegram.py
web/: .env.example  .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: Badges.tsx  ChecklistPanel.tsx  Drawer.tsx
web/lib/: api.ts  format.ts  types.ts
(+17 files in other folders)
