[project]
name = "finance-bot"
version = "0.1.0"
description = "Local AI-powered financial signal bot for VN stocks, BTC, gold, oil and DXY"
requires-python = ">=3.12"
dependencies = [
    # Data sources
    "vnstock>=3.2.0",
    "ccxt>=4.4.0",
    "yfinance>=0.2.50",
    "feedparser>=6.0.11",
    "beautifulsoup4>=4.12.3",
    "requests>=2.32.3",
    # Database
    "sqlalchemy>=2.0.36",
    "pymysql>=1.1.1",
    "cryptography>=44.0.0",
    "alembic>=1.14.0",
    # Analysis
    "pandas>=2.2.3",
    "numpy>=2.1.3",
    "pandas-ta>=0.3.14b0",
    "mplfinance>=0.12.10b0",
    # AI / RAG  (Claude is invoked via the local `claude` CLI — no Python SDK dep needed)
    "chromadb>=0.5.23",
    "sentence-transformers>=3.3.1",
    # Notifier
    "python-telegram-bot>=21.9",
    # Infra
    "apscheduler>=3.11.0",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0.2",
    "loguru>=0.7.3",
    "python-dotenv>=1.0.1",
    # Web dashboard (Module 7)
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "croniter>=6.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.4",
    "mypy>=1.13.0",
    "ipython>=8.30.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
# FastAPI uses `Depends(...)`/`Query(...)` in function defaults by convention.
"src/finance_bot/web/api/*.py" = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finance_bot"]
